--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "flowbite": "^1.8.1",
+    "font-awesome": "^4.7.0",
     "lucide-react": "^0.105.0",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
