--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,9 @@
     "@next/next/no-html-link-for-pages": "off",
     "react/jsx-key": "off",
     "tailwindcss/no-custom-classname": "off",
-    "tailwindcss/classnames-order": "off"
+    "tailwindcss/classnames-order": "off",
+    "@next/next/no-img-element": "off"
+
   },
   "settings": {
     "tailwindcss": {
