--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
@@ -30,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-hot-toast": "^2.4.1",
     "sharp": "^0.31.3",
     "swr": "^2.2.2",
     "tailwind-merge": "^1.13.2",
