--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@types/bcrypt": "^5.0.0",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "flowbite": "^1.8.1",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.105.0",
     "next": "^13.4.8",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -54,6 +60,7 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "prisma": "^5.3.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
