--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "sharp": "^0.31.3",
     "swr": "^2.2.2",
     "tailwind-merge": "^1.13.2",
